# owm-to-elastic

./: Cargo.toml  README.MD
Other-Useful-Stuff/: ingest_pipeline.json  weather_data_mapping.json  weather_to_elastic.service
src/: main.rs
